--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,37 @@
+
 .title{
     text-align: center;
     color: darkcyan;
     font-weight: 100;
     line-height: 50px;
+}
+
+.section{
+    margin: 20px;
+}
+
+.slider {
+    height: 500px;
+    margin: 20px;
+}
+
+.category-item{
+    text-align: center;
+    height: 240px;
+    background-color: white;
+    position: relative;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid lightblue;
+}
+
+.img-responsive{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.section-list {
+    margin: 20px;
+    text-align: center;
 }
