Переделан слайдер, теперь проиходит полная пролистка трех фото через переключатели, осталось только настроить при возможности стрелки и изменить третье фото.

--- a/main/templates/landing/slides.html
+++ b/main/templates/landing/slides.html
@@ -4,15 +4,16 @@
  <html>
 <head>
     <title>slider</title>
-    <link rel="stylesheet" href="{% static 'slides.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'slides.css' %}">
+    <meta charset="UTF-8">
 </head>
  <body>
     <div class="all">
         <input type="radio" name="respond" id="desktop">
         <article id="slider">
-            <input checked type="radio" name="slider" id="swich1">
-            <input type="radio" name="slider" id="swich2">
-            <input type="radio" name="slider" id="swich3">
+            <input checked type="radio" name="slider" id="switch1">
+            <input type="radio" name="slider" id="switch2">
+            <input type="radio" name="slider" id="switch3">
 
             <div id="slides">
                 <div id="owerflow">
