--- a/static/slides.css
+++ b/static/slides.css
@@ -1,50 +1,50 @@
-#slides {
-    position: relative;
+#slider {/* положение слайдера*/
+    margin-bottom: 5px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 25%;
 }
 
-#slides {
-    margin: auto;
+#slider {/*центровка слайдера*/
+    margin: 100 auto;
 }
 
-#slides article {
+#slides article {/*все изображение справа от друг друга*/
     width: 20%;
     float: left;
 }
 
-#slides .image {
-    width: 300%;
-    line-height: 0;
+#slides .image{/*общий размер блока с озображениями*/
+    width: 500%;
+    line-height: 100px;
 }
 
-#overflow {
+#overflow {/*скрывает всё что находится за пределами этого блока*/
     width: 100%;
     overflow: hidden;
 }
 
-article img {
+article img{/*размер изображений*/
     width: 100%;
 }
 
-#desktop:checked ~ #slides {
-    max-width: 1900px;
+#desktop:checked ~ #slider {/*размер всего слайдера*/
+    max-width: 1258px; /*максимальная длина*/
 }
-
-#swich1:checked ~ #controls label:nth-last-child(3),
-#swich2:checked ~ #controls label:nth-last-child(1),
-#swich3:checked ~ #controls label:nth-last-child(2) {
-    background: url("/../static/media/prev.jpg") no-repeat;
+/*настройка переключения и положения для левой стрелки*/
+#switch1:checked ~ #controls label:nth-last-child(3),
+#switch2:checked ~ #controls label:nth-last-child(1),
+#switch3:checked ~ #controls label:nth-last-child(2) {
+    background: url('/../static/media/prev.jpg') no-repeat;
     float: left;
     margin: 0 0 0 -84px;
     display: block;
     height: 68px;
     width: 68px;
 }
-
-#swich1:checked ~ #controls label:nth-last-child(2),
-#swich2:checked ~ #controls label:nth-last-child(3),
-#swich3:checked ~ #controls label:nth-last-child(1) {
+/*настройка для правой стрелки*/
+#switch1:checked ~ #controls label:nth-last-child(2),
+#switch2:checked ~ #controls label:nth-last-child(3),
+#switch3:checked ~ #controls label:nth-last-child(1) {
     background: url('/../static/media/next.jpg') no-repeat;
     float: right;
     margin: 0 -84px 0 0;
@@ -52,66 +52,68 @@ article img {
     height: 68px;
     width: 68px;
 }
-
+/*при наведении на стрелки - курсор изменится*/
 label, a {
     cursor: pointer;
 }
 
-.all input {
+.all input {/*сркывает страндартные чекбоксы на странице*/
     display: none;
 }
-
-switch1:checked ~ #slides .image {
+/*позиция изображения при активации переключателя*/
+#switch1:checked ~ #slides .image {
     margin-left: 0;
 }
 
-switch2:checked ~ #slides .image {
+#switch2:checked ~ #slides .image {
     margin-left: -100%;
 }
 
-switch3:checked ~ #slides .image {
+#switch3:checked ~ #slides .image {
     margin-left: -200%;
 }
 
-#controls {
+#controls {/*положение блока всех управляющих элементов */
     margin: -25% 0 0 0;
     width: 100%;
     height: 50px;
 }
 
-#active label {
-    border-radius: 10px;
-    display: inline-block;
+#active label {/*стиль отдельного переключателя*/
+    border-radius: 10px; /*скрегдение углов*/
+    display: inline-block; /*расположение в строку*/
     width: 15px;
     height: 15px;
-    background: #bbbbbb;
+    background: #3ea7a7;
 }
 
-#active {
+#active {/*расположение блока с переключателями*/
     margin: 23% 0 0;
     text-align: center;
 }
 
-#active label:hover {
-    background: darkcyan;
-    border-color: #777777;
+#active label:hover {/*повеедение чекбокса при наведении*/
+    background: #ff8e52;
+    border-color: #fcfb23 !important; /*выполнение в любом случае*/
 }
 
-#swich1:checked ~ #active label:nth-last-child(1),
-#swich1:checked ~ #active label:nth-last-child(2),
-#swich1:checked ~ #active label:nth-last-child(3) {
-    background: blue;
-    border-color: deeppink !important;
+/*цвет активного лейбла при активации чекбокса (переключателя)*/
+#switch1:checked ~ #active label:nth-last-child(3),
+#switch2:checked ~ #active label:nth-last-child(2),
+#switch3:checked ~ #active label:nth-last-child(1)
+{
+    background: #61ffff;
+    border-color: #3ea7a7 !important;
 }
 
-#slides .image {
+#slides .image {/*анимация*/
     transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
-#controls label:hover {
+#controls label:hover {/*прозрачность стрелок при наведении*/
     opacity: 0.6;
 }
 
-#controls label {
+#controls label {/*прозрачность стрелок при отводе курсора*/
     transition: opacity 0.2s ease-out;
 }
