--- a/main/templates/landing/home.html
+++ b/main/templates/landing/home.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
 {% block content %}
-    <div class="slider">
+    <div class="sess">
         {% include 'landing/slides.html' %}
     </div>
 
