Доработан слайдер, сделала футер (осталось включить ссылки)

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -1,5 +1,27 @@
-<footer>
-    <div class="text">
-        <h3>FOOTER</h3>
+{% load static %}
+
+<!DOCTYPE HTML>
+ <html>
+<head>
+    <title>slider</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <meta charset="UTF-8">
+</head>
+ <body>
+
+<footer class="footer">
+    <section>
+       <H6>     Навигация по сайту</H6>
+        <ul>
+            <li><a href='home.html'>Домой</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Регистрация</a></li>
+        </ul>
+    </section>
+    <div id="rights">
+        Все права защищены 2017
+        Сейлор мун
     </div>
 </footer>
+ </body>
