--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
     line-height: 50px;
 }
 .section{
-    margin: 25px;
+    margin: 20px;
 }
 
 .category-item{
@@ -18,7 +18,6 @@
     padding: 5px;
     border: 1px solid lightgray;
 }
-
 .img-responsive{
     display: block;
     margin-left: auto;
@@ -26,9 +25,45 @@
 }
 
 .section-list {
-    margin: 20px;
     text-align: center;
 }
 .navbar{
-    margin-bottom: 100px;
+     width: 100%;
+    margin-bottom: 20px;
+}
+
+footer {
+    color: #fff; /* Цвет текста */
+    width: 99%; /* Ширина слоя */
+    background: #3ea7a7;
+    border-top: 5px solid silver;
+    margin: 0 auto;
+}
+footer #rights {
+    background: #3ea7a7;
+    float: left;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
+footer >section{
+    display: inline-block;
+}
+footer >section>h6{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+footer >section ul li {
+    list-style: none;
+}
+
+footer >section ul li a{
+    text-decoration: none;
+    color: rgba(255, 254, 250, 0.99);
+    font-size: 16px;
+
+}
+footer >section ul li a:hover{
+    color: black;
 }
