Создание url-путей и соответсвующих html-страниц. Правка ссылок в верхнем toolbar и footer.

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -13,10 +13,10 @@
     <section>
        <H6>     Навигация по сайту</H6>
         <ul>
-            <li><a href='home.html'>Домой</a></li>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li><a href="#">Регистрация</a></li>
+            <li><a href='/'>Домой</a></li>
+            <li><a href="/about/">О нас</a></li>
+            <li><a href="/contacts/">Контакты</a></li>
+            <li><a href="/news/">Новости</a></li>
         </ul>
     </section>
     <div id="rights">
