--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,38 +1,49 @@
+{% load static %}
+
 <!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Бейкери-стрит</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Бейкери-стрит</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Домой</a></li>
-            <li><a href="/">О нас</a></li>
-              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-            <li><a href="#contact">Контакты</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="../main/templates">Static top <span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/"><img src="{% static 'media/home.png' %}"
+                                                    class="img-responsive>"> Домой</a></li>
+                <li><a href="/about/">О нас</a></li>
+                <li><a href="/contacts/">Контакты</a></li>
+                <li><a href="/news/">Новости</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Каталог<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {% for c in cat %}
+                            <li><a href="{% url 'category' c.id %}">{{ c.name }}</a>
+                        {% endfor %}
+                    </ul>
+                </li>
+
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                    <li><a href="/logout/">Привет, {{ user.username }}</a></li>
+                    <li class="active"><a href="/order/"><img src="{% static 'media/cart.png' %}"
+                                                              class="img-responsive>"> Корзина<span
+                            class="sr-only">(current)</span></a>
+                    </li>
+                {% else %}
+                    <li><a href="/signin/">Вход</a></li>
+                    <li class="active"><a href="/signup/"><img src="{% static 'media/account.png' %}"
+                                                              class="img-responsive>"> Pегистрация</a></li>
+                {% endif %}
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    </div>
+</nav>
