--- a/main/templates/product/product-detail.html
+++ b/main/templates/product/product-detail.html
@@ -2,11 +2,68 @@
 {% load static %}
 
 {% block content %}
-    <div class="section-">
-        123
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+
+                    <div class="product-image-item">
+                        <img src="{{ product.image_small }}" class="img-responsive">
+                    </div>
+
+            </div>
+            <div class="col-lg-6">
+                <h1 class="text-center">
+                    {{ product.name }}
+                </h1>
+                <div class="">
+                    <p>
+                        Цена: {{ product.price }} рублей
+                    </p>
+                </div>
+                <div>
+                      <!-- Nav tabs -->
+                      <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#description" aria-controls="home" role="tab" data-toggle="tab">
+                                Описание
+                            </a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#delivery" aria-controls="profile" role="tab" data-toggle="tab">
+                                Доставка
+                            </a>
+                        </li>
+                        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Отзывы</a></li>
+
+                      </ul>
+
+                      <!-- Tab panes -->
+                      <div class="tab-content product-description-tabs">
+                        <div role="tabpanel" class="tab-pane active" id="description">
+                            {{ product.description }}
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="delivery">
+                            <h3>Как мы делаем доставку</h3>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="messages">...</div>
+                        <div role="tabpanel" class="tab-pane" id="settings">...</div>
+                      </div>
+                </div>
+                <div>
+
+                            <div class="form-group">
+                                <button type="submit" id="submit_btn" class="btn btn-success btn-buy"
+                                    data-product_id = "{{ product.id }}"
+                                    data-name ="{{ product.name }}"
+                                    data-price ="{{ product.price }}"
+                                >
+                                    Купить
+                                </button>
+                            </div>
+
+
+                </div>
+            </div>
+        </div>
     </div>
-
-
-
-
 {% endblock %}
