--- a/static/product.css
+++ b/static/product.css
@@ -3,13 +3,19 @@
 }
 
 .product-item {
-    height: 300px;
+    height: 500px;
     background-color: white;
     border: 1px solid lightgrey;
     position: relative;
-    padding: 100px 0 1000px 0;
+    padding: 10px 0 10px 0;
     text-align: center;
     margin-bottom: 10px;
+}
+
+.img-responsive {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 .add-to-card-btn {
