--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,16 @@
-.title{
+.title {
     background-color: #fffabf;
     text-align: center;
     color: red;
     font-weight: 100;
     line-height: 50px;
 }
-.section{
+
+.section {
     margin: 20px;
 }
 
-.category-item{
+.category-item {
     text-align: center;
     height: 290px;
     background-color: white;
@@ -18,17 +19,19 @@
     padding: 5px;
     border: 1px solid lightgray;
 }
-.img-responsive{
+
+.img-responsive {
     display: block;
     margin-left: auto;
     margin-right: auto
 }
 
-.section-list {
+.section-list, .section-reviews {
     text-align: center;
 }
-.navbar{
-     width: 100%;
+
+.navbar {
+    width: 100%;
     margin-bottom: 20px;
 }
 
@@ -39,6 +42,7 @@ footer {
     border-top: 5px solid silver;
     margin: 0 auto;
 }
+
 footer #rights {
     background: #3ea7a7;
     float: left;
@@ -46,24 +50,28 @@ footer #rights {
     text-align: center;
     font-size: 18px;
 }
-footer >section{
+
+footer > section {
     display: inline-block;
 }
-footer >section>h6{
+
+footer > section > h6 {
     color: white;
     font-size: 20px;
     font-weight: bold;
 }
-footer >section ul li {
+
+footer > section ul li {
     list-style: none;
 }
 
-footer >section ul li a{
+footer > section ul li a {
     text-decoration: none;
     color: rgba(255, 254, 250, 0.99);
     font-size: 16px;
 
 }
-footer >section ul li a:hover{
+
+footer > section ul li a:hover {
     color: black;
 }
