--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@
     position: relative;
     margin-bottom: 10px;
     padding: 5px;
-    border: 1px solid lightgray;
+    border: 1px solid #071528;
 }
 
 .img-responsive {
@@ -26,10 +26,12 @@
     margin-right: auto
 }
 
-.section-list, .section-reviews {
+.section-list {
     text-align: center;
 }
-
+.section-reviews {
+    margin-bottom: 20px;
+}
 .navbar {
     width: 100%;
     margin-bottom: 20px;
@@ -37,14 +39,13 @@
 
 footer {
     color: #fff; /* Цвет текста */
-    width: 99%; /* Ширина слоя */
-    background: #3ea7a7;
-    border-top: 5px solid silver;
+    width: 100%; /* Ширина слоя */
+    background: #54cdcc;
     margin: 0 auto;
 }
 
 footer #rights {
-    background: #3ea7a7;
+    background: #54cdcc;
     float: left;
     width: 100%;
     text-align: center;
@@ -59,6 +60,7 @@ footer > section > h6 {
     color: white;
     font-size: 20px;
     font-weight: bold;
+    text-indent: 20px;
 }
 
 footer > section ul li {
