1. Изменен слайдер на главной странице. 2. Переделан футер под более типичный. 3. Сделан отдел отзывов на главной странице. 4. Сделан вход/регистрация пользователей. 5. Добавлена форма добавления отзывов авторизированным пользователям.

--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -3,25 +3,24 @@
 <!DOCTYPE HTML>
  <html>
 <head>
-    <title>slider</title>
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <meta charset="UTF-8">
 </head>
  <body>
 <br>
-<footer class="footer">
-    <section>
-       <H6>     Навигация по сайту</H6>
-        <ul>
-            <li><a href='/'>Домой</a></li>
-            <li><a href="/about/">О нас</a></li>
-            <li><a href="/contacts/">Контакты</a></li>
-            <li><a href="/news/">Новости</a></li>
+<footer class="bd-footer text-muted">
+    <div class="container">
+
+       <ul class="bd-footer-link list-inline">
+            <li class="list-inline-item"><a href='/'>Домой</a></li>
+            <li class="list-inline-item"><a href="/about/">О нас</a></li>
+            <li class="list-inline-item"><a href="/contacts/">Контакты</a></li>
+            <li class="list-inline-item"><a href="/news/">Новости</a></li>
         </ul>
-    </section>
-    <div id="rights">
-        Все права защищены 2017
-        Сейлор мун
+        <p>© 2017 Все права защищены. Создано группой Сейлор-мун</p>
+
     </div>
+
+
 </footer>
  </body>
