--- a/main/templates/landing/product_item.html
+++ b/main/templates/landing/product_item.html
@@ -7,7 +7,7 @@
 <div class="col-lg-4">
     <div class="product-item">
         <div>
-            <img src="{{ MEDIA_URL }}{{ product.image_small }}" class="img-responsive">
+            <img src="{{ MEDIA_URL }}{{ product.image_small.url }}" class="img-responsive">
             <a href="{% url 'product' product.id %}">
 
                 <h4>{{ product.name }}</h4>
