--- a/main/templates/product/product-detail.html
+++ b/main/templates/product/product-detail.html
@@ -6,9 +6,9 @@
         <div class="row">
             <div class="col-lg-6">
 
-                    <div class="product-image-item">
-                        <img src="{{ product.image_small }}" class="img-responsive">
-                    </div>
+                <div class="product-image-item">
+                    <img src="{{ product.image.url }}" class="img-responsive">
+                </div>
 
             </div>
             <div class="col-lg-6">
@@ -16,50 +16,22 @@
                     {{ product.name }}
                 </h1>
                 <div class="">
-                    <p>
+                    <h4>
                         Цена: {{ product.price }} рублей
-                    </p>
+                        Вес: {{ product.weight }} грамм
+                    </h4>
                 </div>
                 <div>
-                      <!-- Nav tabs -->
-                      <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active">
-                            <a href="#description" aria-controls="home" role="tab" data-toggle="tab">
-                                Описание
-                            </a>
-                        </li>
-                        <li role="presentation">
-                            <a href="#delivery" aria-controls="profile" role="tab" data-toggle="tab">
-                                Доставка
-                            </a>
-                        </li>
-                        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Отзывы</a></li>
+                    <div class="row">
+                        {{ product.description }}
+                    </div>
 
-                      </ul>
-
-                      <!-- Tab panes -->
-                      <div class="tab-content product-description-tabs">
-                        <div role="tabpanel" class="tab-pane active" id="description">
-                            {{ product.description }}
-                        </div>
-                        <div role="tabpanel" class="tab-pane" id="delivery">
-                            <h3>Как мы делаем доставку</h3>
-                        </div>
-                        <div role="tabpanel" class="tab-pane" id="messages">...</div>
-                        <div role="tabpanel" class="tab-pane" id="settings">...</div>
-                      </div>
-                </div>
-                <div>
-
-                            <div class="form-group">
-                                <button type="submit" id="submit_btn" class="btn btn-success btn-buy"
-                                    data-product_id = "{{ product.id }}"
-                                    data-name ="{{ product.name }}"
-                                    data-price ="{{ product.price }}"
-                                >
-                                    Купить
-                                </button>
-                            </div>
+                    <div class="form_buying_product" class="form-inline">
+                        <button type="submit" id="submit_btn" class="btn btn-success btn-buy">
+                               <input type="number" class="form-control">
+                            Купить
+                        </button>
+                    </div>
 
 
                 </div>
