--- a/main/templates/registration/signin.html
+++ b/main/templates/registration/signin.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% load static %}
+
+{% block stylesheet %}
+  <link rel="stylesheet" href="{% static 'accounts.css' %}">
+{% endblock %}
+
+{% block content %}
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title text-center">Вход</h3>
+            <form method="post" novalidate>
+              {% csrf_token %}
+              {% include 'form.html' %}
+              <button type="submit" class="btn btn-success btn-center">Войти</button>
+            </form>
+          </div>
+          <div class="card-footer text-muted text-center">
+            Впервые у нас? <a href="{% url 'signup' %}">Зарегистрироваться</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
