--- a/main/templates/landing/product_item.html
+++ b/main/templates/landing/product_item.html
@@ -14,7 +14,7 @@
             </a>
         </div>
         <p>
-            {{ product.description|truncatechars_html:100 }}
+            {{ product.small_description }}
         </p>
         <div>
             {{ product.price }} рублей
