--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -24,7 +24,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Каталог<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        {% for c in cat %}
+                        {% for c in categories %}
                             <li><a href="{% url 'category' c.id %}">{{ c.name }}</a>
                         {% endfor %}
                     </ul>
