--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,12 @@ html, body {
     margin-bottom: 1rem;
 }
 
+.card-img-bottom {
+    color: #fff;
+    height: 400px;
+    background-size: cover;
+}
+
 footer {
     color: #fff; /* Цвет текста */
     width: 100%; /* Ширина слоя */
